use log-rank scores instead of median survival for survival factor ordering

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,5 +2,7 @@
 
 export(simpleRF)
 import(methods)
+import(stats)
+importFrom(coin,logrank_trafo)
 importFrom(ipred,sbrier)
 importFrom(parallel,mclapply)
